# learnkit

./: .gitignore  README.md  abrir_learnkit.bat  install_learnkit_windows.bat  pyproject.toml  requirements.txt
app/: __init__.py  main.py  updater_main.py  version.py
app/application/: __init__.py
app/cli/: __init__.py  main.py
app/core/: __init__.py
docs/: architecture.md  manual_ui_test_checklist.md  materialteste_extraction_report.md  release.md  ui_action_audit.md  ui_polish_and_import_flow.md
scripts/: build_windows.ps1  install_windows.ps1  make_release_manifest.py
tests/: test_ai_response_parser.py  test_application_layer.py  test_combined_review_session.py  test_combined_review_ui.py  test_core_workflows.py  test_developer_mode.py  test_download_update.py  test_extractor_text_markdown.py  test_file_extractor.py  test_flashcard_scheduling.py  test_import_existing_block.py  test_progress_dashboard.py  test_progress_query_service.py  test_progress_service.py  test_prompt_builder.py  test_question_review.py  test_questions_page_flow.py  test_review_cycle_scheduler.py  test_review_cycle_ui.py  test_review_cycle_use_case.py  test_review_schedule_storage.py  test_review_scheduler.py  test_sqlite_bootstrap.py  test_sqlite_repositories.py  test_sqlite_storage.py  test_storage_services.py  test_study_history.py  test_study_session_query_service.py  test_study_summary_use_case.py  test_subject_catalog_use_case.py  test_summary_edit_service.py  test_ui_smoke.py  test_update_check.py  test_update_installer.py  test_update_ui.py  test_visual_summary_schema.py
(+127 files in other folders)
